syntax = "proto3";

package proto;

message TradeOrder
{
    bool buyOrSell = 1;
    string exchange = 2;
    string company = 3;
    int32 quant = 4;
    double price = 5;
    string user = 6;
}

message TradeCompleted 
{
    string exchange = 1;
    string company = 2;
    int32 quant = 3;
    double total = 4;
    string user = 5;
    int64 timestamp = 6;
}
